examples/test/testpolicy13990.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13990
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key22: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value28
          key5: value39
      podSelector:
        matchLabels:
          key23: value46
          key10: value47
